feat: enviando para mirrors
Tem algum erro de continuidade, o primeiro arquivo dá certo, mas os seguintes sempre dão problema

--- a/.gitignore
+++ b/.gitignore
@@ -131,8 +131,11 @@ dmypy.json
 # Pyre type checker
 .pyre/
 
-storage/
+storage/*
 !storage/.gitkeep
 
 downloads/*
 !downloads/.gitkeep
+
+mirror/*
+!mirror/.gitkeep
